# NLSQ

./: .editorconfig  .gitignore  .graphifyignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  COMPREHENSIVE_QUALITY_REPORT.md  CONTRIBUTING.md  DAY1_COMPLETION_SUMMARY.md  DAY1_MORNING_SUMMARY.md  DAY3_COMPLETION_SUMMARY.md  DAY3_INTEGRATION_PLAN.md  DAY5_COMPLETION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXAMPLE_VALIDATION_REPORT.md  MANIFEST.in  MIGRATION_V0.2.0.md  MULTI_AGENT_OPTIMIZATION_SUMMARY.md  Makefile  NEW_EXAMPLES_SUMMARY.md  OPTIMIZATION_LEDGER.md  OPTIMIZATION_REPORT.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ASSESSMENT.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_IMPLEMENTATION_PLAN.md  REFACTORING_PROGRESS.md  REFACTORING_ROADMAP.md  REFACTORING_SESSION_LOG.md  REFACTORING_SUMMARY.md  REFACTORING_TASKS.md  REFACTOR_PLAN.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v1.2.0.md  (+27 more)
.github/: BRANCH_PROTECTION_SETUP.md  CICD_AUTOMATION.md  CI_CD_ENHANCEMENT_SUMMARY.md  CODEOWNERS  CONFIGURATION.md  RELEASE_DRAFT_v0.1.5.md  dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_issue.yml
.github/codeql/: codeql-config.yml
.github/fix-commit-errors/: knowledge-base.md  knowledge.json
.github/workflows/: README.md  benchmark.yml  ci-enhanced.yml  ci-simple.yml  ci-step2.yml  ci-step3.yml  ci-step4.yml  (+12 more)
.github/workflows-archive/: ci.yml  performance.yml  security.yml  status-dashboard.yml  validate-notebooks.yml
.github/workflows.disabled/: README.md  ci.yml  codeql.yml  publish.yml  readme-examples.yml
benchmark/: BENCHMARK_REPORT.md  README.md  benchmark.py  benchmark_cache_unification.py  benchmark_jacobian_autoswitch.py  benchmark_jacobian_simple.py  benchmark_memory_reuse.py  benchmark_mixed_precision.py  benchmark_partial_batches.py  benchmark_sparse_activation.py  benchmark_sprint2.py  benchmark_stability_overhead.py  benchmark_streaming_overhead.py  benchmark_suite.py  coverage_report_beta3.md  host_device_transfer_benchmark.py  lax_scan_design.md  numpy_jax_optimization_plan.md  numpy_operations_audit.md  profile_trf.py  profile_trf_hot_paths.py  quick_cache_benchmark.py  readme.md  run_benchmarks.py  speed_comparison.py  test_comparison.py  test_performance_regression.py  trf_profiling_summary.md
benchmarks/: README.md  benchmark_suite.py  profile_perf_swarm.py  test_condition_benchmark.py  test_import_time.py  test_performance_optimizations.py  test_sparse_jacobian_benchmark.py
docs/: CHANGELOG.md  CI_CD_IMPROVEMENTS_SUMMARY.md  DEFENSE_LAYERS_DOCUMENTATION_SUMMARY.md  Makefile  PYPI_SETUP.md  README.rst  advanced_features.rst  advanced_guide.rst  api_large_datasets.rst  autodocs.rst  conf.py  documentation_update_summary.md  github_actions_schema_guide.md  gui_user_guide.md  index.rst  installation.rst  large_dataset_guide.md  large_dataset_guide.rst  main.rst  migration_guide.rst  notebooks.rst  optimization_case_study.md  performance_benchmarks.rst  performance_tuning_guide.md  requirements.txt  routine_guide.rst  tutorials.rst  validation_report_task2.md
docs_analysis/: documentation_recommendations.md
examples/: INTEGRATION_PLAN_v0.3.x.md  NLSQ 2D Gaussian Demo.ipynb  NLSQ Quickstart.ipynb  NLSQ_2D_Gaussian_Demo.ipynb  NLSQ_2D_Gaussian_Demo_Fixed.ipynb  NLSQ_Interactive_Tutorial.ipynb  README.md  STRUCTURE.md  advanced_features_demo.ipynb  callbacks_demo.py  enhanced_error_messages_demo.py  function_library_demo.py  large_dataset_demo.ipynb  large_dataset_demo.py  nlsq_2d_gaussian_demo.ipynb  nlsq_interactive_tutorial.ipynb  nlsq_quickstart.ipynb  performance_optimization_demo.ipynb  result_enhancements_demo.py
graphify-out/: .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
nlsq/: __init__.py  _optimize.py  _version.py  adaptive_hybrid_streaming.py  algorithm_selector.py  async_logger.py  bound_inference.py  caching.py  callbacks.py  common_jax.py  common_scipy.py  compilation_cache.py  config.py  constants.py  device.py  diagnostics.py  error_messages.py  fallback.py  functions.py  hybrid_streaming_config.py  large_dataset.py  least_squares.py  logging.py  loss_functions.py  memory_manager.py  memory_pool.py  minpack.py  mixed_precision.py  optimizer_base.py  parameter_estimation.py  parameter_normalizer.py  profiler.py  profiler_visualization.py  profiling.py  py.typed  recovery.py  result.py  robust_decomposition.py  smart_cache.py  sparse_jacobian.py  (+9 more)
scripts/: benchmark_baseline.py  benchmark_notebook_utilities.py  benchmark_us1.py  benchmark_us2.py  configure_matplotlib_notebooks.py  configure_notebooks.py  convert_examples.py  dismiss_codeql_false_positives.sh  doc_coverage_analysis.py  fix_conversion_errors.py  fix_display_imports.py  run_notebooks.py  visualize_stability_performance.py
templates/: custom_model_template.py  workflow_config_template.yaml
test_dist/: nlsq-0.1.0.post4-py3-none-any.whl
tests/: README.md  TEST_COMMANDS.md  conftest.py  test_adaptive_hybrid_fault_tolerance.py  test_adaptive_hybrid_integration.py  test_adaptive_hybrid_streaming.py  test_adaptive_memory_ttl.py  test_additional_coverage.py  test_algorithm_efficiency.py  test_algorithm_selector.py  test_api_contracts.py  test_async_checkpoint_queue.py  test_batch_padding_timing.py  test_benchmark_suite.py  test_bound_inference.py  test_caching.py  test_callbacks.py  test_cg_solver.py  test_common_scipy.py  test_compilation_cache.py  test_comprehensive_coverage.py  test_condition_1norm.py  test_config.py  test_config_coverage.py  test_coverage_improvement.py  test_deprecation_shims.py  test_deprecation_warnings.py  test_device.py  test_diagnostics.py  test_distributed.py  test_domain_agnostic_docs.py  test_domain_preset_examples.py  test_domain_removal_integration.py  test_error_messages.py  test_examples_scripts.py  test_fallback.py  test_fallback_integration.py  test_final_coverage.py  test_fit.py  test_functions.py  (+82 more)
three-brain-out/: log.md
(+807 files in other folders)
