[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlsq"
dynamic = ["version"]
description = "GPU/TPU accelerated nonlinear least-squares curve fitting using JAX"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Lucas Hofer", email = "author@email.com"},
]
maintainers = [
    {name = "Lucas Hofer", email = "maintainer@email.com"},
]
keywords = [
    "curve-fitting",
    "optimization",
    "least-squares",
    "jax",
    "gpu",
    "tpu",
    "scientific-computing",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "black>=23.12",
    "ruff>=0.1.9",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "ipython>=8.18",
]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "nbsphinx>=0.9",
    "ipykernel>=6.27",
    "ipython>=8.18",
    "myst-parser>=2.0",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "hypothesis>=6.92",
]
benchmark = [
    "pytest-benchmark>=4.0",
    "asv>=0.6",
]

[project.urls]
Homepage = "https://github.com/Dipolar-Quantum-Gases/NLSQ"
Documentation = "https://nlsq.readthedocs.io"
Repository = "https://github.com/Dipolar-Quantum-Gases/NLSQ.git"
Issues = "https://github.com/Dipolar-Quantum-Gases/NLSQ/issues"
Changelog = "https://github.com/Dipolar-Quantum-Gases/NLSQ/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["nlsq"]
include-package-data = true

[tool.setuptools.package-data]
nlsq = ["py.typed", "*.pyi"]

[tool.setuptools_scm]
write_to = "nlsq/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.black]
line-length = 88
target-version = ['py312']
preview = true

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "PL",   # Pylint
    "NPY",  # NumPy specific rules
    "PERF", # Performance linting
    "FURB", # Refurb (modern Python patterns)
]
ignore = ["E501"]
fix = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/*" = ["S101", "PLR2004"]

[tool.ruff.isort]
known-first-party = ["nlsq"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "jax.*"
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--verbose",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=nlsq",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "tpu: marks tests requiring TPU",
    "integration: integration tests",
]

[tool.coverage.run]
source = ["nlsq"]
omit = ["*/tests/*", "*/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]