[build-system]
requires = ["setuptools>=80.0", "setuptools-scm>=9.0"]  # Tested on 82.0.0, 9.2.2
build-backend = "setuptools.build_meta"

[project]
name = "nlsq"
dynamic = ["version"]
description = "GPU/TPU accelerated nonlinear least-squares curve fitting using JAX"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Wei Chen", email = "wchen@anl.gov"},
    {name = "Lucas Hofer (Original JAXFit)"},
    {name = "Milan Krstajić (Original JAXFit)"},
    {name = "Robert P. Smith (Original JAXFit)"},
]
maintainers = [
    {name = "Wei Chen", email = "wchen@anl.gov"},
]
keywords = [
    "curve-fitting",
    "optimization",
    "least-squares",
    "jax",
    "gpu",
    "tpu",
    "scientific-computing",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
requires-python = ">=3.12"

# ============================================================================
# GPU ACCELERATION (20-100x speedup for large datasets)
# ============================================================================
# Default: CPU-only JAX (works on ALL platforms: Linux, macOS, Windows)
#
# For GPU acceleration (Linux + NVIDIA GPU + System CUDA):
#
#   Prerequisites:
#     - System CUDA 12.x or 13.x installed (nvcc in PATH)
#     - NVIDIA GPU with SM >= 5.2 (Maxwell or newer)
#
#   Quick install (from repository):
#     make install-jax-gpu          # Auto-detect system CUDA version
#     make install-jax-gpu-cuda13   # Force CUDA 13 (requires system CUDA 13.x)
#     make install-jax-gpu-cuda12   # Force CUDA 12 (requires system CUDA 12.x)
#
#   Manual install (uses system CUDA — uninstall ALL existing JAX/CUDA packages first):
#     pip uninstall -y jax jaxlib jax-cuda13-plugin jax-cuda13-pjrt jax-cuda12-plugin jax-cuda12-pjrt
#     pip install "jax[cuda13-local]"  # If system has CUDA 13.x
#     pip install "jax[cuda12-local]"  # If system has CUDA 12.x
#
#   Or with nlsq extras (ensures matching versions):
#     pip install "nlsq[gpu_cuda13]"   # CUDA 13
#     pip install "nlsq[gpu_cuda12]"   # CUDA 12
#
#   IMPORTANT: Never install both cuda12 and cuda13 plugins simultaneously.
#   Only ONE CUDA plugin set can be active — having both causes PJRT registration conflicts.
#   The [tool.uv] conflicts declaration prevents `uv sync --all-extras` from
#   installing both. Use `uv sync --extra gpu_cuda13` or `--extra gpu_cuda12`.
#
#   GPU Compatibility:
#     CUDA 13 (SM 7.5+): RTX 20xx/30xx/40xx, T4, A100, H100, L40
#     CUDA 12 (SM 5.2+): GTX 9xx/10xx, P100, V100, plus all CUDA 13 GPUs
#
#   Platform support:
#     - Linux + NVIDIA GPU + System CUDA: Full GPU acceleration
#     - Windows WSL2: Experimental support (Linux wheels)
#     - macOS: CPU-only (no NVIDIA GPU support)
#     - Windows native: CPU-only (no pre-built wheels)
#
#   Verify your CUDA installation:
#     nvcc --version        # Should show CUDA 12.x or 13.x
#     nvidia-smi            # Should show your GPU
#
# See README.md for detailed GPU installation guide
# ============================================================================

dependencies = [
    # Core scientific computing
    "numpy>=2.2",             # Requires NumPy 2.x (tested on 2.4.2)
    "scipy>=1.16.0",          # Tested on 1.17.1

    # JAX ecosystem (>=0.8.0)
    # GPU users: see GPU ACCELERATION section above for installation
    # IMPORTANT: CUDA plugin versions must exactly match jaxlib version
    "jax>=0.8.0",             # JAX >=0.8.0 (tested on 0.9.1)
    "jaxlib>=0.8.0",          # JAXlib >=0.8.0 (tested on 0.9.1)
    "optax>=0.2.6",           # Gradient transformations for warmup optimization (tested on 0.2.7)

    # Visualization and monitoring
    "matplotlib>=3.10.0",     # Tested on 3.10.8
    "psutil>=7.2.0",          # For memory monitoring (tested on 7.2.2)
    "tqdm>=4.67.0",           # For progress bars (tested on 4.67.3)

    # Large dataset support
    "h5py>=3.15.0",           # Required for streaming large datasets (tested on 3.16.0)

    # Performance
    "xxhash>=3.6.0",          # 10x faster hashing for cache keys (tested on 3.6.0)

    # Configuration
    "pyyaml>=6.0.3",          # YAML configuration file support (tested on 6.0.3)

    # Global optimization
    "evosax>=0.2.0,<0.3.0",   # JAX-based CMA-ES with built-in BIPOP restart conditions

    # Development tools
    "pytest>=9.0.0",          # Tested on 9.0.2
    "pytest-cov>=7.0.0",      # Tested on 7.0.0
    "pytest-xdist>=3.8.0",    # Tested on 3.8.0
    "pytest-benchmark>=5.2.3", # Tested on 5.2.3
    "pytest-rerunfailures>=16.0",  # Retry flaky tests (tested on 16.1)
    "pytest-timeout>=2.4.0",  # Tested on 2.4.0
    "pytest-qt>=4.5.0",       # Qt widget testing (tested on 4.5.0)
    "hypothesis>=6.148.0",    # Property-based testing (tested on 6.151.9)
    "black>=25.0.0",          # Tested on 26.3.0 (CalVer)
    "ruff>=0.14.0",           # Tested on 0.15.5
    "mypy>=1.19.0",           # Static type checker (tested on 1.19.1)
    "pre-commit>=4.5.0",      # Tested on 4.5.1
    "ipython>=9.0.0",         # Tested on 9.11.0
    "bandit>=1.9.0",          # Tested on 1.9.3
    "pyupgrade>=3.21.0",      # Tested on 3.21.2

    # Documentation
    "sphinx>=9.0.0",                    # Tested on 9.1.0
    "furo>=2025.0.0",                   # Modern Sphinx theme (tested on 2025.12.19)
    "sphinx-copybutton>=0.5.2",         # Copy button for code blocks
    "sphinx-autodoc-typehints>=3.5.0",  # Tested on 3.9.7
    "sphinx-design>=0.6.0",             # For grid cards and tabs (tested on 0.7.0)
    "myst-parser>=5.0.0",               # Tested on 5.0.0

    # Benchmark
    "asv>=0.6.5",             # Tested on 0.6.5
    "memory-profiler>=0.61.0", # Tested on 0.61.0

    # Jupyter
    "jupyterlab>=4.5.0",      # Tested on 4.5.5
    "ipykernel>=7.0.0",       # Tested on 7.2.0
    "notebook>=7.5.0",        # Tested on 7.5.4

    # Build tools
    "build>=1.3.0",           # Build frontend (tested on 1.4.0)
    "twine>=6.2.0",           # PyPI upload tool (tested on 6.2.0)
    "setuptools>=80.0.0",     # Build backend (tested on 82.0.0)
    "setuptools-scm>=9.2.0",  # Version management (tested on 9.2.2)
    "wheel>=0.46.2",          # Wheel builder (tested on 0.46.3)

    # Qt GUI (native desktop application)
    "PySide6>=6.10.0",        # Qt bindings (LGPL license, tested on 6.10.2)
    "pyqtgraph>=0.14.0",      # GPU-accelerated scientific plotting (tested on 0.14.0)
]

# GPU extras remain optional — they are mutually exclusive (only ONE can be active).
# Use: pip install "nlsq[gpu_cuda13]" or pip install "nlsq[gpu_cuda12]"
# Or:  make install-jax-gpu (auto-detects system CUDA)
[project.optional-dependencies]
gpu_cuda13 = [
    # CUDA 13 GPU support — versions must match jaxlib
    "jax-cuda13-plugin>=0.8.0",    # CUDA 13 plugin (must match jaxlib version)
    "jax-cuda13-pjrt>=0.8.0",     # CUDA 13 PJRT runtime (must match jaxlib version)
]
gpu_cuda12 = [
    # CUDA 12 GPU support — versions must match jaxlib
    "jax-cuda12-plugin>=0.8.0",    # CUDA 12 plugin (must match jaxlib version)
    "jax-cuda12-pjrt>=0.8.0",     # CUDA 12 PJRT runtime (must match jaxlib version)
]

[project.urls]
Homepage = "https://github.com/imewei/NLSQ"
Documentation = "https://nlsq.readthedocs.io"
Repository = "https://github.com/imewei/NLSQ.git"
Issues = "https://github.com/imewei/NLSQ/issues"
Changelog = "https://github.com/imewei/NLSQ/blob/main/CHANGELOG.md"

[project.scripts]
nlsq = "nlsq.cli.main:main"
nlsq-gui = "nlsq.gui_qt:run_desktop"

[tool.setuptools]
packages = ["nlsq"]
include-package-data = true
zip-safe = false  # Required for type stubs and package data

[tool.setuptools.package-data]
nlsq = ["py.typed", "*.pyi"]

[tool.setuptools_scm]
write_to = "nlsq/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.uv]
# UV-specific configuration for faster builds and better caching
# Note: Use dependency-groups for dev dependencies (modern approach)
package = true  # Enable package mode for proper editable installs

# GPU extras are mutually exclusive — only ONE CUDA plugin set can be active.
# Without this, `uv sync --all-extras` installs both cuda12 and cuda13 plugins
# simultaneously, causing PJRT_Api ALREADY_EXISTS registration conflicts.
conflicts = [
    [
        { extra = "gpu-cuda12" },
        { extra = "gpu-cuda13" },
    ],
]

# Override uvloop to be Unix-only (orbax-checkpoint declares it unconditionally,
# but uvloop does not support Windows)
override-dependencies = [
    "uvloop>=0.22.1; sys_platform != 'win32'",
]

[tool.black]
line-length = 88
target-version = ['py313']
preview = true
# Exclude generated files and caches
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | _build
  | build
  | dist
  | nlsq/_version\.py
)/
'''

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
# Exclude generated files and caches for better performance
extend-exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "_build",
    "build",
    "dist",
    "nlsq/_version.py",
]
# Cache configuration for faster subsequent runs
cache-dir = ".ruff_cache"
# Output format
output-format = "concise"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complexity
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "PL",   # Pylint
    "NPY",  # NumPy specific rules
    "PERF", # Performance linting
    "FURB", # Refurb (modern Python patterns)
]

ignore = ["E501", "E402", "E722", "E741", "B007", "B019", "B028", "PLR2004", "PLC0415", "RUF001", "RUF002", "RUF013", "SIM102", "SIM108", "SIM113", "UP007", "UP028", "UP031", "F401", "F821", "F841", "NPY002", "PLR0911", "PLR0912", "PLR0913", "PLR0915"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "PLR0913", "PLR0912"]
"tests/*" = ["S101", "PLR2004", "NPY002", "B007", "E731", "PLR0913", "B028", "F401", "RUF061"]
"examples/*" = ["PLR0913", "NPY002", "B007", "F841", "RUF059"]
"docs/conf.py" = ["E402"]
"nlsq/__init__.py" = ["PLR0913", "PLR0912", "C901"]  # curve_fit_large CC=28 (known tech debt)
"nlsq/_version.py" = ["UP035"]  # Autogenerated file
"nlsq/common_scipy.py" = ["PLR0912", "PLR0913", "PLR0915"]
"nlsq/types.py" = ["UP040"]  # Intentionally uses TypeAlias to avoid import-time JAX dependency
# Core subpackage
"nlsq/core/trf.py" = ["B007", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "UP031", "C901"]
"nlsq/core/least_squares.py" = ["PLR0912", "PLR0913", "PLR0915", "C901"]
"nlsq/core/sparse_jacobian.py" = ["PLR0913", "PLR0912"]
"nlsq/core/workflow.py" = ["C901"]  # _select_tier_and_options CC=18 (known tech debt)
"nlsq/core/optimizer_base.py" = ["PLR0913", "PLR0912"]
# Streaming subpackage
"nlsq/streaming/large_dataset.py" = ["PLR0913", "PLR0912", "PLR0915"]
"nlsq/streaming/adaptive_hybrid.py" = ["PLR0913", "PLR0912", "PLR0915", "PLR2004", "C901"]
# Caching subpackage
"nlsq/caching/memory_manager.py" = ["PLR0913", "PLR0912", "PLR0915"]
"nlsq/caching/smart_cache.py" = ["PLR0913", "PLR0912", "PLR2004"]
"nlsq/caching/memory_pool.py" = ["PLR0913", "PLR0912"]
# Stability subpackage
"nlsq/stability/guard.py" = ["PLR0913", "PLR0912", "PLR2004", "C901"]
"nlsq/stability/recovery.py" = ["PLR0913", "PLR0912", "PLR0915"]
"nlsq/stability/robust_decomposition.py" = ["PLR0913", "PLR0912", "PLR0915"]
# Precision subpackage
"nlsq/precision/algorithm_selector.py" = ["PLR0913", "PLR0912", "PLR0915"]
"nlsq/precision/parameter_normalizer.py" = ["PLR0913", "PLR0912"]
"nlsq/precision/parameter_estimation.py" = ["C901"]  # detect_function_pattern CC=16
# Utils subpackage
"nlsq/utils/validators.py" = ["PLR0913", "PLR0912", "PLR0915"]
"nlsq/streaming/validators.py" = ["PLR0913", "PLR0912", "PLR0915"]
# Diagnostics and CLI
"nlsq/diagnostics/*" = ["PLR0913", "PLR0912", "PLR0915", "C901"]  # Model Health Diagnostics
"nlsq/cli/*" = ["C901"]  # CLI modules (known tech debt)
# Example scripts, test utilities, and dev scripts (complexity acceptable for standalone tools)
"examples/scripts/*" = ["C901"]
"scripts/*" = ["C901"]
"tests/architecture/utils.py" = ["C901"]

[tool.ruff.lint.isort]
known-first-party = ["nlsq"]

[tool.mypy]
python_version = "3.13"
# Moderate strictness for scientific computing library (v0.3.0 - strengthened)
warn_return_any = true  # Warn when returning Any (stricter)
warn_unused_configs = true
disallow_untyped_defs = false  # Don't require type annotations for all functions
disallow_any_generics = false  # Allow generics without type parameters (common in NumPy/JAX)
no_implicit_optional = true  # Require explicit Optional (stricter - catches bugs)
warn_redundant_casts = true
warn_unused_ignores = false  # Don't warn about unused ignores
warn_no_return = true
check_untyped_defs = true  # Check untyped functions (stricter)
strict_equality = false  # Relax equality checks for NumPy arrays
allow_untyped_calls = true  # Allow calls to untyped functions (JAX/SciPy compatibility)
allow_untyped_decorators = true  # Allow untyped decorators
ignore_errors = false
# Disable problematic error codes for scientific computing (reduced list - stricter)
disable_error_code = ["type-arg", "no-any-return"]
# Performance optimizations
cache_dir = ".mypy_cache"
incremental = true  # Enable incremental type checking for faster runs
show_error_codes = true  # Show error codes for easier filtering
pretty = true  # Better formatted output
# Exclude patterns for faster checking
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "venv/",
    ".eggs/",
    ".*\\.egg-info/",
]

[[tool.mypy.overrides]]
module = "jax.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

# Core subpackage
[[tool.mypy.overrides]]
module = "nlsq.core.sparse_jacobian"
ignore_errors = true  # Complex module with many type issues

[[tool.mypy.overrides]]
module = "nlsq.core.least_squares"
ignore_errors = true  # Core optimization with complex types

[[tool.mypy.overrides]]
module = "nlsq.core.minpack"
ignore_errors = true  # Interface with complex types

[[tool.mypy.overrides]]
module = "nlsq.core.trf"
ignore_errors = true  # Complex optimization algorithm

[[tool.mypy.overrides]]
module = "nlsq.core.optimizer_base"
ignore_errors = true  # Base optimizer class

# Streaming subpackage
[[tool.mypy.overrides]]
module = "nlsq.streaming.large_dataset"
ignore_errors = true  # Complex module with many type issues

[[tool.mypy.overrides]]
module = "nlsq.streaming.*"
ignore_errors = true  # Complex streaming code

# Caching subpackage
[[tool.mypy.overrides]]
module = "nlsq.caching.*"
ignore_errors = true  # Cache modules with optional dependencies

# Stability subpackage
[[tool.mypy.overrides]]
module = "nlsq.stability.*"
ignore_errors = true  # Complex dict types require runtime flexibility

# Precision subpackage
[[tool.mypy.overrides]]
module = "nlsq.precision.*"
ignore_errors = true  # Parameter normalization utilities

# Root-level modules
[[tool.mypy.overrides]]
module = "nlsq.common_scipy"
ignore_errors = true  # SciPy compatibility layer

[[tool.mypy.overrides]]
module = "nlsq.callbacks"
ignore_errors = true  # Callback handlers

# Utils subpackage
[[tool.mypy.overrides]]
module = "nlsq.utils.logging"
ignore_errors = true  # Logging utilities

# Critical modules - type checked (v0.3.0 - strengthened)
[[tool.mypy.overrides]]
module = "nlsq.utils.validators"
ignore_errors = false  # Enable type checking for security validation
check_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "nlsq.diagnostics.*"
ignore_errors = true  # Model Health Diagnostics System (v0.4.3+)

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true  # Don't enforce strict typing in tests

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true  # Qt bindings without type stubs

[[tool.mypy.overrides]]
module = "pyqtgraph.*"
ignore_missing_imports = true  # pyqtgraph without type stubs


[[tool.mypy.overrides]]
module = "nlsq.gui_qt.*"
ignore_errors = true  # Qt GUI code with dynamic Qt types

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "9.0"  # Updated to match installed version (9.0.2)
testpaths = ["tests"]
pythonpath = ["."]
# Modern pytest features for better performance
addopts = [
    "--verbose",
    "-ra",
    "--strict-markers",
    "--strict-config",
    # Parallel execution optimizations (Phase 1: Test Suite Performance Optimization)
    # NOTE: Using fixed worker count to prevent OOM crashes on systems with many cores.
    # With -n auto on 20-core systems, 20 workers × JAX overhead (~500MB each) = 10GB+
    # baseline before tests run. XLA JIT compilation caches grow ~10-16GB per worker
    # across 900+ tests, even with periodic cache clearing (every 200 tests).
    # Using 2 workers: 2 × 4-6GB = 8-12GB max, leaving headroom for the OS and tools.
    "-n", "2",  # Fixed 2 workers to prevent memory exhaustion (was: 4)
    "--dist", "loadscope",  # Group by test module/class for better isolation
    # Coverage disabled for faster CI (enable locally with pytest --cov)
    # Test suite: 3,285 tests (as of 2026-01-09)
    # Current coverage: 82% (exceeds 80% target)
    # "--cov=nlsq",
    # "--cov-report=term-missing",
    # "--cov-report=html",
    # "--cov-report=xml",
    # "--cov-fail-under=80",
    # Performance optimizations
    "--tb=short",  # Shorter traceback format for faster output
    "--no-header",  # Skip header for cleaner output
    "--benchmark-disable",  # Avoid pytest-benchmark warnings under xdist
    # Flaky test handling (parallel execution race conditions)
    "--reruns", "2",  # Retry failed tests up to 2 times
    "--reruns-delay", "1",  # 1 second delay between retries
]
# Console output width for better readability
console_output_style = "progress"
# Log configuration
log_cli = false
log_cli_level = "WARNING"
# Warning filters to reduce overhead and noise
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:jax.*:UserWarning",  # JAX GPU warnings in CPU-only tests
    "ignore:Covariance of the parameters could not be estimated:UserWarning",  # Expected in some tests
    # Diagnostics system warnings (expected test behavior)
    "ignore:\\[IDENT-.*\\]:UserWarning",  # Identifiability issues
    "ignore:\\[GRAD-.*\\]:UserWarning",  # Gradient health issues
    "ignore:Diagnostic plugin '.*' failed:UserWarning",  # Plugin exception isolation tests
    # Numpy warnings in edge case tests with inf/nan values
    "ignore:overflow encountered:RuntimeWarning",
    "ignore:invalid value encountered:RuntimeWarning",
]
markers = [
    # Performance-based test tiers (Phase 1 categorization)
    "unit: fast unit tests (<100ms each)",
    "integration: integration tests (100ms-1s)",
    "slow: marks tests as slow (>1s each, deselect with '-m \"not slow\"')",
    "smoke: critical smoke tests for CI fast feedback (~50 tests, <30s)",
    "serial: marks tests that must run serially (no parallel execution)",
    # Feature-based markers
    "jax_compilation: tests triggering JAX JIT compilation overhead",
    "numerical: numerical accuracy tests (can use relaxed tolerances for speed)",
    # Existing infrastructure markers
    "gpu: marks tests requiring GPU",
    "tpu: marks tests requiring TPU",
    "timeout: marks tests with custom timeout settings",
    "memory: marks tests related to memory management",
    "cache: marks tests related to caching functionality",
    "recovery: marks tests related to optimization recovery",
    "stability: marks tests related to numerical stability",
    "diagnostics: marks tests related to optimization diagnostics",
    "validation: marks tests related to input validation",
    "hybrid_streaming: marks tests for adaptive hybrid streaming optimizer",
    "gui: marks tests for GUI components",
]

[tool.coverage.run]
source = ["nlsq"]
omit = [
    "*/tests/*",
    "*/_version.py",
    "*/gui_qt/*",  # Qt GUI requires display for testing (Xvfb in separate CI job)
]

[tool.coverage.report]
# Test suite: 3,285 tests (as of 2026-01-09)
# Current coverage: 82% (exceeds 80% target)
# Industry-standard for scientific computing libraries: 70-80%
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
# Security linting: only fail on Medium/High severity issues
# Low severity warnings (B404, B603, B607, B110, B101) are informational only
exclude_dirs = ["tests", "examples", "docs", "benchmark", "scripts"]
# Only fail on MEDIUM and HIGH severity issues
skips = ["B404", "B603", "B607", "B110", "B101"]
